--- a/client/index.html
+++ b/client/index.html
@@ -613,7 +613,7 @@ Message kqwq#2348 on Discord or @squishypill on Twitter if you have any question
       let popup = $("#share-popup");
       popup.fadeIn();
     }
-    if (localStorage.getItem("ka.metaverse:uid") === null) {
+    if (localStorage.getItem("ka.metaverse:password") === null) {
       let popup = $("#share-popup");
       openSharePopup()
     } else {
