small updates to client

--- a/client/index.html
+++ b/client/index.html
@@ -502,9 +502,6 @@ Message kqwq#2348 on Discord or @squishypill on Twitter if you have any question
           <button id="build-refresh" class="btn btn-success" onclick="refreshTemplateOptions()">Refresh</button>
           <div id="build-dropdown-menu" class="dropdown-menu" aria-labelledby="triggerId"
             style="height: 300px; overflow-y: scroll;">
-            <h6 class="dropdown-header">Start here</h6>
-            <a class="dropdown-item" href="javascript:void(0)">default</a>
-            <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Basic</h6>
             <div id="template-basic">
             </div>
@@ -542,8 +539,8 @@ Message kqwq#2348 on Discord or @squishypill on Twitter if you have any question
       </div>
     </form>
     <p id="disclaimer" style="border: dotted black 2px; padding: 10px"><b>DISCLAIMER - PLEASE READ </b><br>
-      Please agree that you will not this app for illegal activities, such as uploading copyrighted content or malware.
-      Your app may be removed by a server admin for any reason.<br>
+      I agree that I will not this app for illegal activities, such as uploading copyrighted content.
+      An unsafe app can be removed by a server admin.<br>
       <button onclick="acceptDisclaimer()">I agree</button>
     </p>
     <div class="mb-3">
