--- a/client/index.html
+++ b/client/index.html
@@ -499,7 +499,7 @@ Message kqwq#2348 on Discord or @squishypill on Twitter if you have any question
             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Choose template
           </button>
-          <button id="build-refresh" class="btn btn-success" onclick="refreshTemplateOptions()">Refresh</button>
+          <button id="build-refresh" class="btn btn-success" onclick="getProjects()">Refresh</button>
           <div id="build-dropdown-menu" class="dropdown-menu" aria-labelledby="triggerId"
             style="height: 300px; overflow-y: scroll;">
             <h6 class="dropdown-header">Basic</h6>
